app/deploy/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: demoscs/client
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http-port
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "1"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              port: http-port
              path: /index.html
---
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: client
  ports:
    - port: 5000
      name: http-port
      targetPort: http-port
