app/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  defaultBackend:
    service:
      name: server-cluster-ip
      port:
        name: http-port
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 5000
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip
                port:
                  number: 8080
          - path: /doc
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip
                port:
                  number: 8080
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip
                port:
                  number: 8080
          - path: /version
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip
                port:
                  number: 8080
